--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <h1>Tic Tac Toe</h1>
     <h2>Its your turn, <span class="display_player"></span>.</h2>
+    <h2>Score X: <span class="scoreX"></span></h2>
+    <h2>Score Y: <span class="scoreY"></span></h2>
 
     <div class="game_board">
       <div class='row'>
