--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Tic Tac Toe Game</title>
-    
+
     <link rel="stylesheet" href="style.css" />
-  
   </head>
   <body>
-
     <h1>Tic Tac Toe</h1>
     <h2>Its your turn, <span class="display_player"></span>.</h2>
     <h2>Score X: <span class="scoreX"></span></h2>
     <h2>Score O: <span class="scoreO"></span></h2>
 
+    <h2 class="winner" style="text-align: center"></h2>
+
     <div class="game_board">
-      <div class='row'>
+      <div class="row">
         <div class="one"><span class="xo"></span></div>
         <div class="two"><span class="xo"></span></div>
         <div class="three"><span class="xo"></span></div>
       </div>
-      <div class='row'>
+      <div class="row">
         <div class="four"><span class="xo"></span></div>
         <div class="five"><span class="xo"></span></div>
         <div class="six"><span class="xo"></span></div>
       </div>
-      <div class='row'>
+      <div class="row">
         <div class="seven"><span class="xo"></span></div>
         <div class="eight"><span class="xo"></span></div>
         <div class="nine"><span class="xo"></span></div>
@@ -36,6 +36,4 @@
     <button class="reset">Reset</button>
     <script src="main.js"></script>
   </body>
-
-
 </html>
